--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Heart Disease Prediction</title>
+<link rel="icon" href="{{ url_for('static', filename='heart.png') }}" type="image/png">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -167,7 +169,7 @@
     {% if prediction %}
     <div class="result mt-4">
       <h4 class="text-success">Prediction Result:</h4>
-      <p class="lead">{{ prediction }}</p>
+      <p class="lead font-extrabold">{{ prediction }}</p>
     </div>
     {% endif %}
   </div>
